# EvolutionalNN

./: .gitignore  README.md  pyproject.toml
exps/: navier_stoke.py  parabolic1d.py  parabolic1d_drichlet.py  parabolic2d.py
tests/: Interactive - test_code.py.ipynb  test_code.py  test_extracting_NN.py  test_multimatrix_jacobian.py  test_solve_linear_system.py
